--- a/entity_extraction.ipynb
+++ b/entity_extraction.ipynb
@@ -550,8 +550,55 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "2025/03/13 14:30:01 INFO dspy.teleprompt.mipro_optimizer_v2: \n",
+      "RUNNING WITH THE FOLLOWING MEDIUM AUTO RUN SETTINGS:\n",
+      "num_trials: 25\n",
+      "minibatch: False\n",
+      "num_candidates: 19\n",
+      "valset size: 40\n",
+      "\n",
+      "2025/03/13 14:30:01 INFO dspy.teleprompt.mipro_optimizer_v2: \n",
+      "==> STEP 1: BOOTSTRAP FEWSHOT EXAMPLES <==\n",
+      "2025/03/13 14:30:01 INFO dspy.teleprompt.mipro_optimizer_v2: These will be used as few-shot example candidates for our program and for creating instructions.\n",
+      "\n",
+      "2025/03/13 14:30:01 INFO dspy.teleprompt.mipro_optimizer_v2: Bootstrapping N=19 sets of demonstrations...\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Bootstrapping set 1/19\n",
+      "Bootstrapping set 2/19\n",
+      "Bootstrapping set 3/19\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      " 10%|█         | 1/10 [00:02<00:18,  2.01s/it]"
+     ]
+    }
+   ],
+   "source": [
+    "mipro_optimizer = dspy.MIPROv2(\n",
+    "    metric=extraction_correctness_metric,\n",
+    "    auto=\"medium\",\n",
+    ")\n",
+    "optimized_people_extractor = mipro_optimizer.compile(\n",
+    "    people_extractor,\n",
+    "    trainset=train_set,\n",
+    "    max_bootstrapped_demos=4,\n",
+    "    requires_permission_to_run=False,\n",
+    "    minibatch=False\n",
+    ")"
+   ]
   }
  ],
  "metadata": {
