--- a/dataset.ipynb
+++ b/dataset.ipynb
@@ -22,6 +22,77 @@
     "\n",
     "print(dataset.train[0])"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import os\n",
+    "import tempfile\n",
+    "from datasets import load_dataset\n",
+    "from typing import Dict, Any, List\n",
+    "import dspy\n",
+    "\n",
+    "def load_conll_dataset() -> dict:\n",
+    "    \"\"\"\n",
+    "    Loads the CoNLL-2003 dataset into train, validation, and test splits.\n",
+    "    \n",
+    "    Returns:\n",
+    "        dict: Dataset splits with keys 'train', 'validation', and 'test'.\n",
+    "    \"\"\"\n",
+    "    with tempfile.TemporaryDirectory() as temp_dir:\n",
+    "        # Use a temporary Hugging Face cache directory for compatibility with certain hosted notebook\n",
+    "        # environments that don't support the default Hugging Face cache directory\n",
+    "        os.environ[\"HF_DATASETS_CACHE\"] = temp_dir\n",
+    "        return load_dataset(\"conll2003\", trust_remote_code=True)\n",
+    "\n",
+    "def extract_people_entities(data_row: Dict[str, Any]) -> List[str]:\n",
+    "    \"\"\"\n",
+    "    Extracts entities referring to people from a row of the CoNLL-2003 dataset.\n",
+    "    \n",
+    "    Args:\n",
+    "        data_row (Dict[str, Any]): A row from the dataset containing tokens and NER tags.\n",
+    "    \n",
+    "    Returns:\n",
+    "        List[str]: List of tokens tagged as people.\n",
+    "    \"\"\"\n",
+    "    return [\n",
+    "        token\n",
+    "        for token, ner_tag in zip(data_row[\"tokens\"], data_row[\"ner_tags\"])\n",
+    "        if ner_tag in (1, 2)  # CoNLL entity codes 1 and 2 refer to people\n",
+    "    ]\n",
+    "\n",
+    "def prepare_dataset(data_split, start: int, end: int) -> List[dspy.Example]:\n",
+    "    \"\"\"\n",
+    "    Prepares a sliced dataset split for use with DSPy.\n",
+    "    \n",
+    "    Args:\n",
+    "        data_split: The dataset split (e.g., train or test).\n",
+    "        start (int): Starting index of the slice.\n",
+    "        end (int): Ending index of the slice.\n",
+    "    \n",
+    "    Returns:\n",
+    "        List[dspy.Example]: List of DSPy Examples with tokens and expected labels.\n",
+    "    \"\"\"\n",
+    "    return [\n",
+    "        dspy.Example(\n",
+    "            tokens=row[\"tokens\"],\n",
+    "            expected_extracted_people=extract_people_entities(row)\n",
+    "        ).with_inputs(\"tokens\")\n",
+    "        for row in data_split.select(range(start, end))\n",
+    "    ]\n",
+    "\n",
+    "# Load the dataset\n",
+    "dataset = load_conll_dataset()\n",
+    "\n",
+    "# Prepare the training and test sets\n",
+    "train_set = prepare_dataset(dataset[\"train\"], 0, 50)\n",
+    "test_set = prepare_dataset(dataset[\"test\"], 0, 200)\n",
+    "\n",
+    "train_set[4]"
+   ]
   }
  ],
  "metadata": {
