--- a/classification.ipynb
+++ b/classification.ipynb
@@ -1053,6 +1053,134 @@
     "\n",
     "events"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "Event: 1388 – Maria of Enghien sells the lordship of Argos and Nauplia to the Republic of Venice.[2]\n",
+      "\n",
+      "1B Model: Wars and Conflicts (confidence: 1.00)\n",
+      "70B Model: Politics and Governance (confidence: 0.90)\n",
+      "\n",
+      "Event: 1866 – Oaks explosion: The worst mining disaster in England kills 361 miners and rescuers.[5]\n",
+      "\n",
+      "1B Model: Wars and Conflicts (confidence: 0.55)\n",
+      "70B Model: Man-Made Disasters and Accidents (confidence: 1.00)\n",
+      "\n",
+      "Event: 1915 – Yuan Shikai declares the establishment of the Empire of China and proclaims himself Emperor.[8]\n",
+      "\n",
+      "1B Model: Wars and Conflicts (confidence: 2.00)\n",
+      "70B Model: Politics and Governance (confidence: 0.95)\n",
+      "\n",
+      "Event: 1917 – Father Edward J. Flanagan founds Boys Town as a farm village for wayward boys.[9]\n",
+      "\n",
+      "1B Model: Wars and Conflicts (confidence: 2.50)\n",
+      "70B Model: Social Movements (confidence: 0.80)\n",
+      "\n",
+      "Event: 1935 – The Lebensborn Project, a Nazi reproduction program, is founded by Heinrich Himmler.[10]\n",
+      "\n",
+      "1B Model: Wars and Conflicts (confidence: 0.80)\n",
+      "70B Model: Politics and Governance (confidence: 0.95)\n",
+      "\n",
+      "Event: 1936 – The beginning of Xi'an incident. As a result, Chiang Kai Shek is captured.[11]\n",
+      "\n",
+      "1B Model: Wars and Conflicts (confidence: 2.00)\n",
+      "70B Model: Politics and Governance (confidence: 0.90)\n",
+      "\n",
+      "Event: 1939 – HMS Duchess sinks after a collision with HMS Barham off the coast of Scotland with the loss of 124 men.[13]\n",
+      "\n",
+      "1B Model: Wars and Conflicts (confidence: 0.80)\n",
+      "70B Model: Man-Made Disasters and Accidents (confidence: 0.95)\n",
+      "\n",
+      "Event: 1945 – The People's Republic of Korea is outlawed in the South, by order of the United States Army Military Government in Korea.[17]\n",
+      "\n",
+      "1B Model: Wars and Conflicts (confidence: 0.80)\n",
+      "70B Model: Politics and Governance (confidence: 0.95)\n",
+      "\n",
+      "Event: 1969 – The Piazza Fontana bombing; a bomb explodes at the headquarters of Banca Nazionale dell'Agricoltura (the National Agricultural Bank) in Piazza Fontana in Milan, Italy, killing 17 people and wounding 88. The same afternoon, three more bombs are detonated in Rome and Milan, and another is found unexploded.[21]\n",
+      "\n",
+      "1B Model: Wars and Conflicts (confidence: 0.80)\n",
+      "70B Model: Man-Made Disasters and Accidents (confidence: 0.95)\n",
+      "\n",
+      "Event: 1979 – The 8.2 Mw  Tumaco earthquake shakes Colombia and Ecuador with a maximum Mercalli intensity of IX (Violent), killing 300–600, and generating a large tsunami.[22]\n",
+      "\n",
+      "1B Model: Wars and Conflicts (confidence: 2.22)\n",
+      "70B Model: Natural Disasters and Climate (confidence: 1.00)\n",
+      "\n",
+      "Event: 1979 – Coup d'état of December Twelfth occurs in South Korea.[23]\n",
+      "\n",
+      "1B Model: Wars and Conflicts (confidence: 0.75)\n",
+      "70B Model: Politics and Governance (confidence: 0.95)\n",
+      "\n",
+      "Event: 1985 – Arrow Air Flight 1285R, a McDonnell Douglas DC-8, crashes after takeoff in Gander, Newfoundland, killing all 256 people on board, including 236 members of the United States Army's 101st Airborne Division.[24]\n",
+      "\n",
+      "1B Model: Wars and Conflicts (confidence: 0.97)\n",
+      "70B Model: Man-Made Disasters and Accidents (confidence: 1.00)\n",
+      "\n",
+      "Event: 1988 – The Clapham Junction rail crash kills thirty-five and injures hundreds after two collisions of three commuter trains—one of the worst train crashes in the United Kingdom.[25]\n",
+      "\n",
+      "1B Model: Wars and Conflicts (confidence: 0.75)\n",
+      "70B Model: Man-Made Disasters and Accidents (confidence: 0.95)\n",
+      "\n",
+      "Event: 1999 – A magnitude 7.3 earthquake hits the Philippines's main island of Luzon, killing six people, injuring 40, and causing power outages that affected the capital Manila.[26]\n",
+      "\n",
+      "1B Model: Wars and Conflicts (confidence: 0.10)\n",
+      "70B Model: Natural Disasters and Climate (confidence: 1.00)\n",
+      "\n",
+      "Event: 2012 – North Korea successfully launches its first satellite, Kwangmyŏngsŏng-3 Unit 2.[29]\n",
+      "\n",
+      "1B Model: Politics and Governance (confidence: 0.50)\n",
+      "70B Model: Science and Innovation (confidence: 0.90)\n",
+      "\n",
+      "Event: 2021 – Dutch Formula One racing driver Max Verstappen wins the controversial 2021 Abu Dhabi Grand Prix, beating seven-time World Champion Lewis Hamilton to become the first Formula One World Champion to come from the Netherlands.[32]\n",
+      "\n",
+      "1B Model: Wars and Conflicts (confidence: 0.50)\n",
+      "70B Model: Sports and Entertainment (confidence: 0.95)\n",
+      "\n",
+      "Event: 2024 – Indian Grandmaster Gukesh Dommaraju became the undisputed World Chess Champion in a tournament held in Singapore, making him the 18th and the youngest champion in chess history.[33]\n",
+      "1B Model: Wars and Conflicts (confidence: 1.00)\n",
+      "70B Model: Famous Personalities and Achievements (confidence: 0.95)\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Find rows where the categories disagree\n",
+    "disagreements = events[events['category_32_1b'] != events['category_33_70b']]\n",
+    "\n",
+    "# Print each disagreement with both model predictions\n",
+    "for idx, row in disagreements.iterrows():\n",
+    "    print(f\"\\nEvent: {row['event_string']}\")\n",
+    "    print(f\"1B Model: {row['category_32_1b']} (confidence: {row['confidence_32_1b']:.2f})\")\n",
+    "    print(f\"70B Model: {row['category_33_70b']} (confidence: {row['confidence_33_70b']:.2f})\")\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "17"
+      ]
+     },
+     "execution_count": 22,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "len(disagreements)"
+   ]
   }
  ],
  "metadata": {
