--- a/classification.ipynb
+++ b/classification.ipynb
@@ -1181,6 +1181,16 @@
    "source": [
     "len(disagreements)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def validate_category(example, prediction, trace=None):\n",
+    "    return prediction.category == example.category"
+   ]
   }
  ],
  "metadata": {
