--- a/classification.ipynb
+++ b/classification.ipynb
@@ -1184,12 +1184,131 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [],
    "source": [
     "def validate_category(example, prediction, trace=None):\n",
     "    return prediction.category == example.category"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 31,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0"
+      ]
+     },
+     "execution_count": 31,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "cost = sum([x['cost'] for x in lm.history if x['cost'] is not None])  # cost in USD, as calculated by LiteLLM for certain providers\n",
+    "cost"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 29,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Prediction(\n",
+      "    category='Politics and Governance',\n",
+      "    confidence=0.95\n",
+      ")\n"
+     ]
+    },
+    {
+     "data": {
+      "text/html": [
+       "\n",
+       "<div>\n",
+       "  <style scoped>\n",
+       "  button {\n",
+       "    border: none;\n",
+       "    border-radius: 4px;\n",
+       "    background-color: rgb(34, 114, 180);\n",
+       "    font-family: -apple-system, \"system-ui\", \"Segoe UI\", Roboto, \"Helvetica Neue\", Arial;\n",
+       "    font-size: 13px;\n",
+       "    color: white;\n",
+       "    margin-top: 8px;\n",
+       "    margin-bottom: 8px;\n",
+       "    padding: 8px 16px;\n",
+       "    cursor: pointer;\n",
+       "  }\n",
+       "  button:hover {\n",
+       "    background-color: rgb(66, 153, 224);\n",
+       "  }\n",
+       "  </style>\n",
+       "  <button\n",
+       "    onclick=\"\n",
+       "        const display = this.nextElementSibling.style.display;\n",
+       "        const isCollapsed = display === 'none';\n",
+       "        this.nextElementSibling.style.display = isCollapsed ? null : 'none';\n",
+       "\n",
+       "        const verb = isCollapsed ? 'Collapse' : 'Expand';\n",
+       "        this.innerText = `${verb} MLflow Trace`;\n",
+       "    \"\n",
+       "  >Collapse MLflow Trace</button>\n",
+       "  <iframe\n",
+       "    id=\"trace-renderer\"\n",
+       "    style=\"width: 100%; height: 500px; border: none; resize: vertical;\"\n",
+       "    src=\"http://localhost:5000/static-files/lib/notebook-trace-renderer/index.html?trace_id=70b60a8814914ecf8582d38bb4526d59&amp;experiment_id=374362034103955121&amp;version=2.20.3\"\n",
+       "  />\n",
+       "</div>\n"
+      ],
+      "text/plain": [
+       "Trace(request_id=70b60a8814914ecf8582d38bb4526d59)"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "# Open and read the 2023 events file\n",
+    "with open('wiki-events-2023.txt', 'r') as f:\n",
+    "    events_2023 = f.readlines()\n",
+    "# Open and read the 2024 events file\n",
+    "with open('wiki-events-2024.txt', 'r') as f:\n",
+    "    events_2024 = f.readlines()\n",
+    "\n",
+    "# Combine the events from both years\n",
+    "all_events = events_2023 + events_2024\n",
+    "\n",
+    "# Create a new DataFrame with the combined events\n",
+    "all_events_df = pd.DataFrame(all_events, columns=['description'])\n",
+    "\n",
+    "# Load environment variables from .env file\n",
+    "from dotenv import load_dotenv\n",
+    "load_dotenv()\n",
+    "\n",
+    "import json\n",
+    "\n",
+    "with dspy.context(lm=dspy.LM('anthropic/claude-3-5-haiku-20241022')):  \n",
+    "    for event in all_events_df['description']:\n",
+    "        result = classify(event=event)\n",
+    "        # Write the result to a jsonl file in append mode\n",
+    "        with open('classifications.jsonl', 'a') as f:\n",
+    "            json.dump({\n",
+    "                'event': event,\n",
+    "                'category': result.category,\n",
+    "                'confidence': result.confidence\n",
+    "            }, f)\n",
+    "            f.write('\\n')\n",
+    "\n",
+    "    cost = sum([x['cost'] for x in lm.history if x['cost'] is not None])  # cost in USD, as calculated by LiteLLM for certain providers\n",
+    "\n"
    ]
   }
  ],
