--- a/classification.ipynb
+++ b/classification.ipynb
@@ -1215,9 +1215,56 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 32,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "\n",
+       "<div>\n",
+       "  <style scoped>\n",
+       "  button {\n",
+       "    border: none;\n",
+       "    border-radius: 4px;\n",
+       "    background-color: rgb(34, 114, 180);\n",
+       "    font-family: -apple-system, \"system-ui\", \"Segoe UI\", Roboto, \"Helvetica Neue\", Arial;\n",
+       "    font-size: 13px;\n",
+       "    color: white;\n",
+       "    margin-top: 8px;\n",
+       "    margin-bottom: 8px;\n",
+       "    padding: 8px 16px;\n",
+       "    cursor: pointer;\n",
+       "  }\n",
+       "  button:hover {\n",
+       "    background-color: rgb(66, 153, 224);\n",
+       "  }\n",
+       "  </style>\n",
+       "  <button\n",
+       "    onclick=\"\n",
+       "        const display = this.nextElementSibling.style.display;\n",
+       "        const isCollapsed = display === 'none';\n",
+       "        this.nextElementSibling.style.display = isCollapsed ? null : 'none';\n",
+       "\n",
+       "        const verb = isCollapsed ? 'Collapse' : 'Expand';\n",
+       "        this.innerText = `${verb} MLflow Trace`;\n",
+       "    \"\n",
+       "  >Collapse MLflow Trace</button>\n",
+       "  <iframe\n",
+       "    id=\"trace-renderer\"\n",
+       "    style=\"width: 100%; height: 500px; border: none; resize: vertical;\"\n",
+       "    src=\"http://localhost:5000/static-files/lib/notebook-trace-renderer/index.html?trace_id=2823cfdb353744b18bcbddbf353418a9&amp;experiment_id=374362034103955121&amp;trace_id=ff42e1e720fe45e4a43e3eca3b649f5f&amp;experiment_id=374362034103955121&amp;trace_id=1897ed537f204724aac304417d9a6da7&amp;experiment_id=374362034103955121&amp;trace_id=66fdabf0ba9b4149bb1a564b20ddd910&amp;experiment_id=374362034103955121&amp;trace_id=acde2d64dea54b99a011f7083a5a4e80&amp;experiment_id=374362034103955121&amp;trace_id=7097004e9668410d99b71221850c4ff8&amp;experiment_id=374362034103955121&amp;trace_id=19474ad5d42d47f497c38bba74a2b145&amp;experiment_id=374362034103955121&amp;trace_id=8dbdb6473c484ffbbbea14709e2872f8&amp;experiment_id=374362034103955121&amp;trace_id=0d481764ef9849cabbede2d2d9be9a87&amp;experiment_id=374362034103955121&amp;trace_id=5eff710bf6014f60a7783c01ea84cbb1&amp;experiment_id=374362034103955121&amp;version=2.20.3\"\n",
+       "  />\n",
+       "</div>\n"
+      ],
+      "text/plain": [
+       "[Trace(request_id=2823cfdb353744b18bcbddbf353418a9), Trace(request_id=ff42e1e720fe45e4a43e3eca3b649f5f), Trace(request_id=1897ed537f204724aac304417d9a6da7), Trace(request_id=66fdabf0ba9b4149bb1a564b20ddd910), Trace(request_id=acde2d64dea54b99a011f7083a5a4e80), Trace(request_id=7097004e9668410d99b71221850c4ff8), Trace(request_id=19474ad5d42d47f497c38bba74a2b145), Trace(request_id=8dbdb6473c484ffbbbea14709e2872f8), Trace(request_id=0d481764ef9849cabbede2d2d9be9a87), Trace(request_id=5eff710bf6014f60a7783c01ea84cbb1)]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
    "source": [
     "# Open and read the 2023 events file\n",
     "with open('wiki-events-2023.txt', 'r') as f:\n",
@@ -1253,6 +1300,73 @@
     "    cost = sum([x['cost'] for x in lm.history if x['cost'] is not None])  # cost in USD, as calculated by LiteLLM for certain providers\n",
     "\n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 33,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0"
+      ]
+     },
+     "execution_count": 33,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "cost"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 34,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Training set size: 390\n",
+      "Testing set size: 98\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Load the classifications from the JSONL file\n",
+    "classifications = []\n",
+    "with open('classifications.jsonl', 'r') as f:\n",
+    "    for line in f:\n",
+    "        classifications.append(json.loads(line))\n",
+    "\n",
+    "# Convert to DataFrame\n",
+    "classifications_df = pd.DataFrame(classifications)\n",
+    "\n",
+    "shuffled_df = classifications_df.sample(frac=1, random_state=42)\n",
+    "\n",
+    "split_point = int(0.8 * len(shuffled_df))\n",
+    "\n",
+    "# Split the data\n",
+    "train_df = shuffled_df.iloc[:split_point].reset_index(drop=True)\n",
+    "test_df = shuffled_df.iloc[split_point:].reset_index(drop=True)\n",
+    "\n",
+    "# Reset indices\n",
+    "train_df = train_df.reset_index(drop=True)\n",
+    "test_df = test_df.reset_index(drop=True)\n",
+    "\n",
+    "print(f\"Training set size: {len(train_df)}\")\n",
+    "print(f\"Testing set size: {len(test_df)}\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
